--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "version": "0.0.1",
     "type": "module",
     "scripts": {
+        "prepare": "svelte-kit sync || echo ''",
+        "postinstall": "pnpm run shaka:patch",
         "tauri": "tauri",
         "auth:init": "scripts/auth/init.ts",
         "innertube:proxy": "scripts/innertube/proxy.ts",
+        "shaka:patch": "scripts/shaka/patch.ts",
         "dev": "pnpm run auth:init && pnpx concurrently 'pnpm run innertube:proxy' 'vite dev'",
         "build": "vite build",
         "preview": "vite preview",
-        "prepare": "svelte-kit sync || echo ''",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "format": "prettier --write ${FILES:-.} && eslint --fix ${FILES:-.}",
@@ -19,55 +21,60 @@
         "test": "npm run test:unit -- --run"
     },
     "dependencies": {
-        "@tauri-apps/api": "^2.8.0",
+        "@tauri-apps/api": "^2.9.0",
         "@tauri-apps/plugin-opener": "~2.5.0",
         "@tauri-apps/plugin-shell": "^2.3.1",
         "@tauri-apps/plugin-store": "~2.4.0",
-        "firebase": "^12.3.0",
+        "bgutils-js": "^3.2.0",
+        "dashjs": "^5.0.3",
+        "firebase": "^12.4.0",
+        "google-api-javascript-client": "^0.1.0",
+        "googlevideo": "^4.0.4",
         "parse-full-name": "^1.2.6",
         "rxjs": "^7.8.2",
+        "shaka-player": "^4.16.6",
         "sveltefire": "^0.4.5",
-        "youtubei.js": "^15.1.1"
+        "youtubei.js": "^16.0.1"
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.2",
         "@eslint/compat": "^1.4.0",
-        "@eslint/js": "^9.36.0",
-        "@internationalized/date": "^3.9.0",
+        "@eslint/js": "^9.38.0",
+        "@internationalized/date": "^3.10.0",
         "@lucide/svelte": "^0.544.0",
-        "@stylistic/eslint-plugin": "^5.4.0",
-        "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.22.0",
-        "@sveltejs/vite-plugin-svelte": "^6.0.0",
-        "@tailwindcss/vite": "^4.0.0",
-        "@tauri-apps/cli": "^2.8.4",
-        "@types/node": "^22",
-        "@vitest/browser": "^3.2.3",
-        "bits-ui": "^2.11.4",
+        "@stylistic/eslint-plugin": "^5.5.0",
+        "@sveltejs/adapter-static": "^3.0.10",
+        "@sveltejs/kit": "^2.47.3",
+        "@sveltejs/vite-plugin-svelte": "^6.2.1",
+        "@tailwindcss/vite": "^4.1.16",
+        "@tauri-apps/cli": "^2.9.1",
+        "@types/node": "^22.18.12",
+        "@vitest/browser": "^3.2.4",
+        "bits-ui": "^2.14.1",
         "clsx": "^2.1.1",
-        "eslint": "^9.36.0",
+        "eslint": "^9.38.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-import-resolver-typescript": "^4.4.4",
         "eslint-plugin-github": "^6.0.0",
         "eslint-plugin-import-x": "^4.16.1",
-        "eslint-plugin-svelte": "^3.12.4",
-        "eslint-plugin-unused-imports": "^4.2.0",
+        "eslint-plugin-svelte": "^3.12.5",
+        "eslint-plugin-unused-imports": "^4.3.0",
         "globals": "^16.4.0",
-        "playwright": "^1.53.0",
-        "prettier": "^3.4.2",
-        "prettier-plugin-svelte": "^3.3.3",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "svelte": "^5.0.0",
-        "svelte-check": "^4.0.0",
+        "playwright": "^1.56.1",
+        "prettier": "^3.6.2",
+        "prettier-plugin-svelte": "^3.4.0",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "svelte": "^5.42.1",
+        "svelte-check": "^4.3.3",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^3.1.1",
-        "tailwindcss": "^4.0.0",
-        "tw-animate-css": "^1.3.8",
-        "typescript": "^5.0.0",
-        "typescript-eslint": "^8.44.1",
-        "vite": "^7.0.4",
+        "tailwindcss": "^4.1.16",
+        "tw-animate-css": "^1.4.0",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.2",
+        "vite": "^7.1.12",
         "vite-plugin-devtools-json": "^1.0.0",
-        "vitest": "^3.2.3",
+        "vitest": "^3.2.4",
         "vitest-browser-svelte": "^0.1.0"
     },
     "pnpm": {
