--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@sveltejs/kit": "^2.47.3",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/vite": "^4.1.16",
+        "@tanstack/table-core": "^8.21.3",
         "@tauri-apps/cli": "^2.9.1",
         "@types/node": "^22.18.12",
         "@vitest/browser": "^3.2.4",
